<resources>
    <string name="app_name">Responsi PPAB</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_profile">Profile</string>
    <string name="tab_title1">Sejarah</string>
    <string name="tab_titles2">Visi Misi</string>
    <string name="tab_titles3">Pengajar</string>
    <string-array name="instructor_name">
        <item>Prof. Drs. Bambang Harjito, M.App.Sc, Ph.D.</item>
        <item>Dr. Wiranto, M.Kom, M.Cs.</item>
        <item>Dr. Umi Salamah, S.Si., M.Kom.</item>
        <item>Didiek Sri Wahyono, S.T., M.T.</item>
        <item>Dr. Tech. Dewi Wisnu Wardani, S.Kom., M.S.</item>
        <item>Abdul Aziz, S.Kom., M.Cs.</item>
        <item>Ristu Saptono, S.Si., M.T.</item>
        <item>Dr. Wisnu Widiarto, S.Si., M.T.</item>
        <item>Rini Anggrainingsih, S.T., M.T.</item>
        <item>Esti Suryani, S.Si., M.Kom.</item>
        <item>Sari Widya Sihwi, S.Kom., M.T.I.</item>
        <item>Afrizal Doewes, S.Kom., M.Sc.</item>
        <item>Winarno, S.Si., M.Eng.</item>
        <item>Dr. Wiharto, S.T., M.Kom.</item>
        <item>Hasan Dwi Cahyono, S.Kom., M.Kom.</item>
        <item>Haryono Setiadi, S.T., M.Eng.</item>
        <item>Heri Prasetyo, S.Kom., M.Sc.Eng., Ph.D.</item>
        <item>Ardhi Wijayanto, S.Kom., M.Cs.</item>
    </string-array>
    <string name="instructor_button">Profil Lengkap</string>
    <string name="home_app_description">Aplikasi \"Responsi PPAB\" merupakan aplikasi android yang dibuat dalam rangka menyelesaikan tugas Responsi PPAB. Aplikasi ini akan menyajikan data berupa sejarah, visi misi, dan tenaga pengajar dalam program studi informatika di Fakultas Teknologi Informasi dan Sains Data atau disebut juga sebagai FATISDA.</string>
    <string name="home_source">Website FATISDA</string>
    <string name="title_history">Sejarah Program Studi Informatika</string>
    <string name="history_1">Program Studi Informatika FATISDA UNS adalah salah satu program studi di Fakultas Teknologi Informasi dan Sains Data Universitas Sebelas Maret Surakarta yang berdiri sejak tanggal 29 Januari 2007 dengan nama Program Studi Ilmu Komputer melalui SK Pendirian 163/D/T/2007. Pada tahun 2009 berganti nama menjadi Program Studi Informatika berdasarkan pada surat perpanjangan ijin operasional.</string>
    <string name="history_2">Program Studi Informatika FATISDA UNS saat ini memiliki staf pengajar berpendidikan minimal S2 (Magister/Master) baik dari dalam maupun luar negeri yang terbagi dalam 6 (enam) kelompok penelitian yaitu: Soft Computing (SC), Computational Science (CS), Information and Data Security (IDS), Information System (IS), Network and Distributed System, Software Architecture and Engineering (SAE). Pengembangan staf Program Studi Teknik Informatika FATISDA UNS dilakukan dengan melakukan pengiriman staf mengikuti pelatihan, seminar (conference), dan studi lanjut baik di dalam maupun ke luar negeri.</string>
    <string name="history_3">Kurikulum Program Studi Informatika FATISDA UNS mengacu salah satunya pada ACM Computing Curricula 2005 yang disesuaikan dengan penambahan muatan lokal. Secara periodik kurikulum dievaluasi dan disesuaikan dengan kondisi yang berkembang dengan melibatkan seluruh staf akademik  melalui lokakarya setiap dua tahun. Keterlibatan stakeholder dan alumni diwujudkan dalam bentuk survei kepuasan pelanggan serta studi pelacakan alumni (tracer studi) yang rutin dilakukan dalam jangka waktu tiap semester/tiap tahun.</string>
    <string name="history_4">Di bidang penelitian Program Studi Informatika FATISDA UNS memberikan fasilitas kepada dosen berupa ketersediaan fasilitas laboritorium penelitian, yang terdiri dari SI, RPL, IRK serta JST. Keluaran dari penelitian telah dipublikasikan melalui jurnal internasional, jurnal nasional dan melalui seminar/konferensi baik tingkat nasional maupun internasional. Pencapaian penelitian yang lolos dalam hibah pendanaan penelitian juga cukup besar, paling tidak satu proposal bisa dibiayai dalam satu skema hibah.</string>
    <string name="history_5">Pengabdian kepada Masyarakat dilakukan Program Studi Informatika dengan dua skema, yaitu pengimplementasian hasil penelitian dan pelatihan. Pelatihan pemanfaatan ICT untuk pembelajaran ternyata memperoleh tanggapan yang cukup baik dari masyarakat. Hal tersebut terbukti dari adanya permintaan pelatihan dari pihak sekolah/kelompok sekolah.</string>
    <string name="history_6">Di bidang kerjasama dengan pihak eksternal, Program Studi Informatika FATISDA UNS melakukan kerjasama dalam bentuk kegiatan magang, visiting professor/lecturer, penelitian dan pengabdian masyarakat serta pembelajaran yang mengarah pada kurikulum. Lembaga/institusi tersebut berasal dari dalam negeri antara lain: PT TELKOM, GamaTechno, dan PT INKA maupun luar negeri antara lain University of SAGA, dan University Technology of Malaya (UTeM).</string>
    <string name="history_7">Program Studi Informatika memiliki fasilitas belajar berupa perpustakaan (di tingkat Universitas dan Fakultas) yang didukung dengan ketersediaan jurnal internasional terbaru. Untuk penyelenggaraan perkuliahan di tiga gedung berbagi pakai dengan program studi lain di FMIPA UNS. Selain itu untuk kepentingan koneksi jaringan internet di UNS saat ini sudah mencapai 350 Mbps, dengan setiap mahasiswa sudah bisa mencapai maksimal 512 Kbps.  Sistem pengelolaan dan pemeliharaan fasilitas fisik (Gedung/bangunan) dilakukan di tingkat Fakultas, melalui sub bagian Umum dan Perlengkapan. Layanan Administrasi Akademik dan Kemahasiswaan telah dilakukan dengan dukungan sistem informasi antara lain layanan Registrasi secara Online, Sistem Akademik (Pengambilan Mata Kuliah, Jadwal dan Penilaian), Beasiswa dan Program Kreatifitas Mahasiswa.</string>
    <string name="history_8">Dari aspek Sistem Penjaminan Kualitas Program Studi Informatika FATISDA UNS meliputi input, proses PBM dan output serta outcome. Penjaminan mutu internal diterapkan pada perbaikan proses pembelajaran, pelaksanaan magang mahasiswa serta pelaksanaan tugas akhir. Dampaknya antara lain meningkatnya IPK mahasiswa dan kecepatan penyelesaian tugas akhir yang berimbas pada masa studi. Untuk kepentingan tersebut Program Studi Teknik Informatika mendatangkan Tenaga Ahli dalam pengembangan pembelajaran dan penelitian.</string>
    <string name="history_9">Program Studi Informatika telah selesai melakukan proses re-akreditasi program studi. Berdasarkan keputusan BAN-PT No. 1081/SK/BAN-PT/Akred/S/IV/2018, program studi Informatika UNS memperoleh Akreditasi A yang berlaku selama 5 (lima) tahun sejak tanggal 17 April 2018 hingga 17 April 2023.</string>
    <string name="title_visi">Visi Program Studi Informatika</string>
    <string name="content_visi">Sebagai penyelenggara pendidikan bidang Informatika yang berkualitas dan mampu bersaing di tingkat internasional</string>
    <string name="title_misi">Misi Program Studi Informatika</string>
    <string name="content_misi">\u25CF Menyelenggarakan kegiatan pendidikan dan pengajaran yang terencana, terarah, dan berkelanjutan\n\n\u25CF Melakukan kajian dan penelitian di bidang Informatika yang bermanfaat dan meningkatkan daya saing bangsa\n\n\u25CF Melaksanakan pengabdian pada masyarakat sesuai dengan kompetensi dalam bidang Informatika</string>
    <string name="title_tujuan">Tujuan</string>
    <string name="content_tujuan">\u25CF Dihasilkannya sarjana Informatika yang berkarakter, profesional, dan mandiri\n\n\u25CF Dihasilkannya produk kajian dan penelitian pada bidang Informatika yang dapat berguna dan berdaya saing\n\n\u25CF Diterapkannya hasil kajian dan penelitian untuk membantu meningkatkan kualitas kehidupan masyarakat</string>
    <string name="profile_Name">Irfan Adi Prasetya</string>
    <string name="profile_Nim">L0122079</string>
    <string name="profile_Prodi">Informatika, 2022</string>
    <string name="profile_Fakultas">Fakultas Teknologi Informasi dan Sains Data\n(FATISDA)</string>
    <string name="profile_Universitas">Universitas Sebelas Maret\n(UNS)</string>
    <string name="profile_Email">irfan.adi.prasetya@student.uns.ac.id</string>
    <string name="profile_Share">Share</string>
</resources>