<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.HistoryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/TextView_layout.Title"
            android:layout_marginTop="20dp"
            android:text="@string/title_history"/>
        <TextView
            style="@style/TextView_layout.Paragraph_History"
            android:layout_marginTop="10dp"
            android:text="@string/history_1"/>
        <TextView
            style="@style/TextView_layout.Paragraph_History"
            android:text="@string/history_2"/>
        <TextView
            style="@style/TextView_layout.Paragraph_History"
            android:text="@string/history_3"/>
        <TextView
            style="@style/TextView_layout.Paragraph_History"
            android:text="@string/history_4"/>
        <TextView
            style="@style/TextView_layout.Paragraph_History"
            android:text="@string/history_5"/>
        <TextView
            style="@style/TextView_layout.Paragraph_History"
            android:text="@string/history_6"/>
        <TextView
            style="@style/TextView_layout.Paragraph_History"
            android:text="@string/history_7"/>
        <TextView
            style="@style/TextView_layout.Paragraph_History"
            android:text="@string/history_8"/>
        <TextView
            style="@style/TextView_layout.Paragraph_History"
            android:layout_marginBottom="?attr/actionBarSize"
            android:text="@string/history_9"/>
    </LinearLayout>
</ScrollView>